--- a/paginas/discografia.html
+++ b/paginas/discografia.html
@@ -16,7 +16,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="../index.html">Inicioooo</a></li>
+				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="./discografia.html">Discografia</a></li>
 				<li><a href="./merch.html">Merch</a></li>
 				<li><a href="./tour.html">Love on tour</a></li>
@@ -34,7 +34,7 @@
 				</div>
 				<div class="main__discos__fineline">
 					<h3>Fine line (2019)</h3>
-					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7xV2TzoaVc0ycW7fwBwAml?utm_source=generator" width="100%" height="480" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7xV2TzoaVc0ycW7fwBwAml?utm_source=generator" width="100%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 				</div>
 			</div>
 		</section>
