--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./recursos/favicon2.png" >
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--#cf4520 codigo color favicon-->
 </head>
 <body>
@@ -31,7 +32,7 @@
                 <img src="./recursos/harry.jpg" alt="Harry Styles sonriendo" class="main__biografia__imagen">
             </div>
             <div class="main__biografia__texto">
-                <h1>Harry Styles</h1>
+                <h1 class="animate__animated animate__bounce">Harry Styles</h1>
                 <p class="main__biografia__p">
                     Harry Styles es un cantante y compositor británico de música pop, ex miembro de la boy band One Direction , y el primer hombre que consigue ocupar en solitario la portada de Vogue USA . Harry Styles nació en Cheshire (Reino Unido) en 1994 y creció junto a su madre y su hermana después de que sus padres se divorciaran. En 2010 fue seleccionado para participar en la edición británica del programa Factor X . No ganó pero de aquel talent televisivo surgió el grupo One Direction formado, además de Styles, por Liam Payne, Zayn Malik, Niall Horan y Louis Tomlinson. Como miembro de One Direction publicó cinco álbumes, convirtiéndose en uno de los fenómenos fan más importantes del comienzo de los dosmiles. En 2016, tras la separación de la banda, Styles comenzó a trabajar en su disco de debut en solitario. En mayo de 2017 se publicó su trabajo homónimo que incluía su primer gran hit, Sign of the Times . Convertido en uno de los músicos más influyentes de Reino Unido, también debutó en el cine con la película Dunkerque de Christopher Nolan.
                 </p>
