--- a/paginas/merch.html
+++ b/paginas/merch.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merch</title>
 	<link rel="shortcut icon" href="../recursos/favicon2.png">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -27,44 +28,88 @@
 		</header>
 		<main class="tienda2">
 			<h2 class="merchtitulo">Merch Oficial</h2>
-			<section class="tienda">
-				<div class="tienda__producto producto1">
-					<img src="../recursos/remera.png" class="tienda__producto__imagen" alt="remera blanca">
-					<h3>Remera</h3>
-					<h4>$2000</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+			<div class="row row-cols-1 row-cols-md-4 g-4">
+				<div class="col">
+					<div class="card text-center border-light ">
+					<img src="../recursos/bolsa.png" class="card-img-top producto" alt="...">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Bolsa Watermelon Sugar</h5>
+						<p class="card-text ">Bolsa reutilizable, 40cm de alto x 40cm de ancho x 20cm de fuelle.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-				<div class="tienda__producto producto2">
-					<img src="../recursos/gorra.png" class="tienda__producto__imagen" alt="gorra negra">
-					<h3>Gorra</h3>
-					<h4>$1500</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/buzo.png" class="card-img-top producto" alt="buzo negro harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Buzo Bunny con capucha</h5>
+						<p class="card-text">Bunny Love On Tour impreso en la parte delantera con capucha, unisex, negro, 80 % algodón y 20 % poliéster.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-				<div class="tienda__producto producto3">
-					<img src="../recursos/buzo.png" class="tienda__producto__imagen" alt="buzo negro">
-					<h3>Buzo</h3>
-					<h4>$3000</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/disco.png" class="card-img-top producto" alt="disco harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Harry's House CD</h5>
+						<p class="card-text">Disco individual, en Softpak, con folleto de 20 páginas.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-				<div class="tienda__producto producto4">
-					<img src="../recursos/vinilo.png" class="tienda__producto__imagen" alt="disco de vinilo">
-					<h3>Vinilo</h3>
-					<h4>$2200</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/gorra.png" class="card-img-top producto" alt="gorra negra harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Gorra Harry is my friend</h5>
+						<p class="card-text">Esta gorra negra ajustable tiene bordado "Harry is my Friend" en un hilo de color menta. Hecho de 100% algodón.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-				<div class="tienda__producto producto6">
-					<img src="../recursos/bolsa.png" class="tienda__producto__imagen" alt="bolsa de tela">
-					<h3>Bolsa</h3>
-					<h4>$800</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/remera.png" class="card-img-top producto" alt="...">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Remera Fine Line</h5>
+						<p class="card-text">Remera color blanco, unisex con estampa de fine line.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-				<div class="tienda__producto producto5">
-					<img src="../recursos/disco.png" class="tienda__producto__imagen" alt="disco">
-					<h3>Disco</h3>
-					<h4>1500</h4>
-					<input type="button" value="Comprar" class="main__botonentradas">
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/vinilo.png" class="card-img-top producto" alt="vinilo harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Harry's House Standard Vinilo</h5>
+						<p class="card-text">Disco sencillo de 180 gramos, vinilo negro, sobrecubierta plegada, funda interior impresa, postal de 5” x 7”, folleto de 12 páginas.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
 				</div>
-			</section>
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/buzo2.png" class="card-img-top producto" alt="buzo color crema harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Buzo color crema </h5>
+						<p class="card-text">TPWK unisex de cuello redondo, color natural, 50 % algodón, 50 % poliéster.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card text-center border-light">
+					<img src="../recursos/bag.png" class="card-img-top producto" alt="bolso harry styles">
+					<div class="card-body">
+						<h5 class="card-title producto__titulo">Neceser de maquillaje Love On Tour</h5>
+						<p class="card-text">Neceser de lona con estampado TPWK en diferentes colores en cada cara.</p>
+						<input type="button" value="Comprar" class="main__botonentradas">
+					</div>
+					</div>
+				</div>
+				</div>
 		</main>
 		<footer>
 			<div class="footer__derechos">
@@ -83,5 +128,6 @@
 			</div>
 		</footer>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
