--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--#cf4520 codigo color favicon-->
 </head>
 <body>
@@ -51,22 +52,22 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                     </div>
-                <div class="main__biografia__texto col-xl-6 col-md-12 col-sm-10">
+                <div class="main__biografia__texto text-center col-xl-6 col-md-12 col-sm-10">
                     <h1 class="animate__animated animate__bounce">Harry Styles</h1>
                     <p class="main__biografia__p">
-                        Harry Styles es un cantante y compositor británico de música pop, ex miembro de la boy band One Direction , y el primer hombre que consigue ocupar en solitario la portada de Vogue USA . Harry Styles nació en Cheshire (Reino Unido) en 1994 y creció junto a su madre y su hermana después de que sus padres se divorciaran. En 2010 fue seleccionado para participar en la edición británica del programa Factor X . No ganó pero de aquel talent televisivo surgió el grupo One Direction formado, además de Styles, por Liam Payne, Zayn Malik, Niall Horan y Louis Tomlinson. Como miembro de One Direction publicó cinco álbumes, convirtiéndose en uno de los fenómenos fan más importantes del comienzo de los dosmiles. En 2016, tras la separación de la banda, Styles comenzó a trabajar en su disco de debut en solitario. En mayo de 2017 se publicó su trabajo homónimo que incluía su primer gran hit, Sign of the Times . Convertido en uno de los músicos más influyentes de Reino Unido, también debutó en el cine con la película Dunkerque de Christopher Nolan.
+                        Harry Styles es un cantante y compositor británico de música pop, ex miembro de la boy band One Direction , y el primer hombre que consigue ocupar en solitario la portada de Vogue USA. Harry Styles nació en Cheshire (Reino Unido) en 1994 y creció junto a su madre y su hermana después de que sus padres se divorciaran. En 2010 fue seleccionado para participar en la edición británica del programa Factor X. No ganó pero de aquel talent televisivo surgió el grupo One Direction formado, además de Styles, por Liam Payne, Zayn Malik, Niall Horan y Louis Tomlinson. Como miembro de One Direction publicó cinco álbumes, convirtiéndose en uno de los fenómenos fan más importantes del comienzo de los dosmiles. En 2016, tras la separación de la banda, Styles comenzó a trabajar en su disco de debut en solitario. En mayo de 2017 se publicó su trabajo homónimo que incluía su primer gran hit, Sign of the Times. Convertido en uno de los músicos más influyentes de Reino Unido, también debutó en el cine con la película Dunkerque de Christopher Nolan.
                     </p>
                 </div>
             </div>
             <div class="row justify-content-between align-items-center">
-                <div class="main__cancion__prueba col-xl-6 col-md-12 col-sm-11">
+                <div class="main__cancion col-xl-6 col-md-12 col-sm-11">
                     <h2 class="main__cancion__titulo">As it was</h2>
                     <h3 class="main__cancion__subtitulo">Nuevo single de su proximo disco</h3>
-                    <h3 class="main__cancion    __subtitulo2">Disponible en todas las plataformas</h3>
+                    <h3 class="main__cancion__subtitulo2">Disponible en todas las plataformas</h3>
                     <a href="https://open.spotify.com/track/4LRPiXqCikLlN15c3yImP7?si=6fc9b62e64e84366" target="_blank"><input type="button" class="main__botonspotify" value="As It Was en Spotify"></a>
                 </div>
-                <div class="videoprueba col-xl-6 col-md-12 col-sm-5">
-                    <iframe src="https://player.vimeo.com/video/696500497?h=9856e42242&color=ffffff&title=0&byline=0&portrait=0" width="640" height="445" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <div class="main__video m-0 col-xl-6 col-md-12 ">
+                    <iframe src="https://player.vimeo.com/video/696500497?h=9856e42242&color=ffffff&title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
@@ -87,6 +88,10 @@
             </ul>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
