--- a/paginas/discografia.html
+++ b/paginas/discografia.html
@@ -46,7 +46,7 @@
 			<h3>Alexis Delgado</h3>
 		</div>
         <div class="footer__redes">
-            Segui a Harry en sus redes
+            <h3> Segui a Harry en sus redes </h3>
             <ul>
                 <li><a href="https://www.youtube.com/channel/UCZFWPqqPkFlNwIxcpsLOwew" target="_blank"><img src="../recursos/youtube-icon.png" alt="youtube"></a></li>
                 <li><a href="https://www.instagram.com/harrystyles/" target="_blank"><img src="../recursos/instagram-icon.png" alt="instagram"></a></li>
