--- a/paginas/merch.html
+++ b/paginas/merch.html
@@ -9,6 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow&family=Montserrat:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 	<div class="grid2">
@@ -28,78 +29,78 @@
 		</header>
 		<main class="tienda2">
 			<h2 class="merchtitulo">Merch Oficial</h2>
-			<div class="row row-cols-1 row-cols-md-4 g-4">
-				<div class="col">
+			<div class="row m-0 row-cols-1 row-cols-md-4 g-4">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light ">
 					<img src="../recursos/bolsa.png" class="card-img-top producto" alt="...">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Bolsa Watermelon Sugar</h5>
 						<p class="card-text ">Bolsa reutilizable, 40cm de alto x 40cm de ancho x 20cm de fuelle.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/buzo.png" class="card-img-top producto" alt="buzo negro harry styles">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Buzo Bunny con capucha</h5>
 						<p class="card-text">Bunny Love On Tour impreso en la parte delantera con capucha, unisex, negro, 80 % algodón y 20 % poliéster.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/disco.png" class="card-img-top producto" alt="disco harry styles">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Harry's House CD</h5>
 						<p class="card-text">Disco individual, en Softpak, con folleto de 20 páginas.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/gorra.png" class="card-img-top producto" alt="gorra negra harry styles">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Gorra Harry is my friend</h5>
 						<p class="card-text">Esta gorra negra ajustable tiene bordado "Harry is my Friend" en un hilo de color menta. Hecho de 100% algodón.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/remera.png" class="card-img-top producto" alt="...">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Remera Fine Line</h5>
 						<p class="card-text">Remera color blanco, unisex con estampa de fine line.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/vinilo.png" class="card-img-top producto" alt="vinilo harry styles">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Harry's House Standard Vinilo</h5>
 						<p class="card-text">Disco sencillo de 180 gramos, vinilo negro, sobrecubierta plegada, funda interior impresa, postal de 5” x 7”, folleto de 12 páginas.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/buzo2.png" class="card-img-top producto" alt="buzo color crema harry styles">
-					<div class="card-body">
+					<div class="card-body p-0">
 						<h5 class="card-title producto__titulo">Buzo color crema </h5>
 						<p class="card-text">TPWK unisex de cuello redondo, color natural, 50 % algodón, 50 % poliéster.</p>
 						<input type="button" value="Comprar" class="main__botonentradas">
 					</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light">
 					<img src="../recursos/bag.png" class="card-img-top producto" alt="bolso harry styles">
 					<div class="card-body">
@@ -117,7 +118,7 @@
 				<h3>Alexis Delgado</h3>
 			</div>
 			<div class="footer__redes">
-				Segui a Harry en sus redes
+				<h3>Segui a Harry en sus redes</h3>
 				<ul>
 					<li><a href="https://www.youtube.com/channel/UCZFWPqqPkFlNwIxcpsLOwew" target="_blank"><img src="../recursos/youtube-icon.png" alt="youtube"></a></li>
 					<li><a href="https://www.instagram.com/harrystyles/" target="_blank"><img src="../recursos/instagram-icon.png" alt="instagram"></a></li>
@@ -128,6 +129,10 @@
 			</div>
 		</footer>
 	</div>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>    
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
