--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="footer__derechos">
             <h3> Todos los derechos reservados ©</h3>
             <h3>Alexis Delgado</h3>
