--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina dedicada al cantante y compositor Harry styles de gran trayectoria internacional, ex one direction, ganador de un grammy,">
+    <meta name="keywords" content="harry, harry styles, harrys, styles, cantante, cantante britanico, as it was, harrys house, ex miembro one direction, one direction">
     <title>Harry Styles</title>
     <link rel="shortcut icon" href="./recursos/favicon2.png" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
