--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contacto</title>
+	<meta name="description" content="Pagina dedicada al cantante y compositor Harry styles de gran trayectoria internacional, ex one direction, ganador de un grammy,">
+    <meta name="keywords" content="harry, harry styles, harrys, styles, cantante, cantante britanico, as it was, harrys house, ex miembro one direction, one direction, tu opinion, sobre vos, spotify, youtube">
+	<title>Harry Styles - Contacto</title>
 	<link rel="shortcut icon" href="../recursos/favicon2.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
@@ -28,9 +30,9 @@
 	<main>
 		<section>
 			<div class="contacto__texto">
-				<h2 class="main__cancion__titulo">
+				<h1 class="main__cancion__titulo">
 					Contacto
-				</h2>
+				</h1>
 			<div class="cuadro">	
 				<p class="main__biografia__p">
 					Nos interesa conocerte, saber tù opinion que es lo que te gustaria, contenido que desees ver o cambios que harias
