--- a/paginas/discografia.html
+++ b/paginas/discografia.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discografia</title>
+	<meta name="description" content="Todo sobre la discografia de Harry styles">
+    <meta name="keywords" content="harry, harry styles, harrys, styles, cantante, cantante britanico, as it was, harrys house, ex miembro one direction, one direction, hs, fine line, fl, discos harry styles, discos harry">
+    <title>Harry Styles - Discografia</title>
 	<link rel="shortcut icon" href="../recursos/favicon2.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
@@ -27,7 +29,7 @@
 	</header>
 	<main>
 		<section class="main__discos">
-			<h2 class="main__discos__titulo">Discografia</h2>
+			<h1 class="main__discos__titulo">Discografia</h1>
 			<div class="main__ambosdiscos">
 				<div class="main__discos__hs">
 					<h3>Harry Styles (2017)</h3>
