--- a/paginas/merch.html
+++ b/paginas/merch.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merch</title>
+	<meta name="description" content="Venta del mech oficial de Harry styles">
+    <meta name="keywords" content="harry, harry styles, harrys, styles, cantante, cantante britanico, as it was, harrys house, ex miembro one direction, one direction, remera harry styles, buzo harry styles, merch harry styles, cosas de harry styles, regalos harry styles">
+    <title>Harry Styles - Merch</title>
 	<link rel="shortcut icon" href="../recursos/favicon2.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
@@ -28,7 +30,7 @@
 			</nav>
 		</header>
 		<main class="tienda2">
-			<h2 class="merchtitulo">Merch Oficial</h2>
+			<h1 class="merchtitulo">Merch Oficial</h1>
 			<div class="row m-0 row-cols-1 row-cols-md-4 g-4">
 				<div class="col p-0" data-aos="zoom-in">
 					<div class="card text-center border-light ">
