--- a/paginas/tour.html
+++ b/paginas/tour.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love on tour</title>
+    <meta name="description" content="Te contamos todo acerca del tour internacional de Harry styles">
+    <meta name="keywords" content="harry, harry styles, harrys, styles, cantante, cantante britanico, as it was, harrys house, ex miembro one direction, one direction, tour, love on tour, harry styles fechas, harry styles tour">
+    <title>Harry styles- Tour</title>
 	<link rel="shortcut icon" href="../recursos/favicon2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/estilos.css">
@@ -26,6 +28,9 @@
 		</nav>
 	</header>
     <main>
+        <h1 class="merchtitulo">
+            Love On Tour
+        </h1>
         <img src="../recursos/love-on-tour.jpg" alt="Love on tour" class="main__tourimagen">
         <div>
             <ul class="main__fechas">
