--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -14,18 +14,32 @@
 </head>
 <body>
 	<header>
-		<div class="header__logo">
-			<img src="../recursos/logo-naranja.jpg"  alt="logo" class="header__logo__imagen">
-		</div>
-		<nav>
-			<ul>
-				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="./discografia.html">Discografia</a></li>
-				<li><a href="./merch.html">Merch</a></li>
-				<li><a href="./tour.html">Love on tour</a></li>
-				<li><a href="./contacto.html">Contacto</a></li>
-			</ul>
-		</nav>
+		<nav class="navbar navbar-expand-lg">
+            <div class="container-fluid p-0">
+            <a href="../index.html"><img src="../recursos/logo-naranja.jpg"  alt="logo" class="header__logo__imagen"></a> 
+                <button class="navbar-toggler z-index-1 mx-3  " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-down-square-fill" viewBox="0 0 16 16">
+                    <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5a.5.5 0 0 1 1 0z"/>
+                    </svg></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./discografia.html">Discografia</a></li>
+                    <li><a href="./merch.html">Merch</a></li>
+                    <li><a href="./tour.html">Love on tour</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./discografia.html">Discografia</a></li>
+                        <li><a href="./merch.html">Merch</a></li>
+                        <li><a href="./tour.html">Love on tour</a></li>
+                        <li><a href="#">Contacto</a></li>
+                    </ul>
+                </ul>
+                </div>
+            </div>
+    	</nav>
 	</header>
 	<main>
 		<section>
