--- a/paginas/discografia.html
+++ b/paginas/discografia.html
@@ -14,30 +14,46 @@
 </head>
 <body>
 	<header>
-		<div class="header__logo">
-			<img src="../recursos/logo-naranja.jpg"  alt="logo" class="header__logo__imagen">
-		</div>
-		<nav>
-			<ul>
-				<li><a href="../index.html">Inicio</a></li>
-				<li><a href="./discografia.html">Discografia</a></li>
-				<li><a href="./merch.html">Merch</a></li>
-				<li><a href="./tour.html">Love on tour</a></li>
-				<li><a href="./contacto.html">Contacto</a></li>
-			</ul>
-		</nav>
+		<nav class="navbar navbar-expand-lg">
+            <div class="container-fluid p-0">
+            <a href="../index.html"><img src="../recursos/logo-naranja.jpg"  alt="logo" class="header__logo__imagen"></a> 
+                <button class="navbar-toggler z-index-1 mx-3  " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-down-square-fill" viewBox="0 0 16 16">
+                    <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm6.5 4.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5a.5.5 0 0 1 1 0z"/>
+                    </svg></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Discografia</a></li>
+                    <li><a href="./merch.html">Merch</a></li>
+                    <li><a href="./tour.html">Love on tour</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="#">Discografia</a></li>
+                        <li><a href="./merch.html">Merch</a></li>
+                        <li><a href="./tour.html">Love on tour</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
+                    </ul>
+                </ul>
+                </div>
+            </div>
+    	</nav>
 	</header>
 	<main>
 		<section class="main__discos">
 			<h1 class="main__discos__titulo">Discografia</h1>
 			<div class="main__ambosdiscos">
-				<div class="main__discos__hs">
+				<div class="main__discos__hs col-xl-6 col-md-12 w-75">
 					<h3>Harry Styles (2017)</h3>
-					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1FZKIm3JVDCxTchXDo5jOV?utm_source=generator" width="100%" height="480" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>	
+					<p class="fw-bold main__ambosdiscos__p">Styles debutó en el número uno en el Billboard 200 de Estados Unidos con 230 mil unidades equivalentes de álbum, de las cuales 193 mil eran ventas de álbumes puras. Fue la primera semana de ventas más alta para el álbum de debut de un artista británico de larga duración desde que Nielsen SoundScan comenzó en 1991. Hasta el día de hoy, el álbum ha vendido más de 4 millones de copias puras a nivel mundial, siendo este uno de los álbumes más exitosos del 2017.</p>
+					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1FZKIm3JVDCxTchXDo5jOV?utm_source=generator" width="80%" height="480" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>	
 				</div>
-				<div class="main__discos__fineline">
+				<div class="main__discos__fineline col-xl-6 col-md-12 w-75">
 					<h3>Fine line (2019)</h3>
-					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7xV2TzoaVc0ycW7fwBwAml?utm_source=generator" width="100%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+					<p class="fw-bold main__ambosdiscos__p">Debutó en el número tres en la lista de álbumes del Reino Unido y en el número uno en el Billboard 200, lo que lo convierte en el segundo número consecutivo de Styles en álbumes en Estados Unidos. Tuvo la tercera semana de ventas más grande de 2019 en Estados Unidos, y rompió el récord como el debut más grande de un artista masculino británico con 478.000 unidades equivalentes al álbum, certificandose posteriormente con disco de platino por la Recording Industry Association of America (RIAA) por ventas de más de u	n millón de unidades.</p>
+					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7xV2TzoaVc0ycW7fwBwAml?utm_source=generator" width="80%" height="450" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 				</div>
 			</div>
 		</section>
